--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,15 +15,9 @@ jobs:
   - upload: $(Build.ArtifactStagingDirectory)
     artifact: drop
 
+
 - deployment: VMDeploy
-  displayName: web
-  pool:
-    vmImage: 'Ubuntu-latest'
+  displayName: Web deploy
   environment:
-    name: dev
+    name:  ubuntu-dev
     resourceType: VirtualMachine
-  strategy:
-      runOnce:
-        deploy:
-          steps:
-          - script: echo my first deployment
